feat: adde socials, testimonials

--- a/home-freelancer-white-version.html
+++ b/home-freelancer-white-version.html
@@ -81,8 +81,23 @@
                         If you are looking for a machine learning freelancer who can transform your vision into reality, please don't hesitate to reach out.
                       </p>
                     </div>
+                    <div class="row">
+                        <div class="col-lg-6 col-xl-6 col-md-6 col-sm-6 col-12">
+                            <div class="social-share-inner-left">
+                                <span class="title">Let's connect</span>
+                                <ul class="social-share d-flex liststyle">
+                                    <li class="facebook"><a href="#"><i data-feather="facebook"></i></a>
+                                    </li>
+                                    <li class="instagram"><a href="#"><i data-feather="instagram"></i></a>
+                                    </li>
+                                    <li class="linkedin"><a href="#"><i data-feather="linkedin"></i></a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                     <div
-                      class="button-group text-center text-md-start pt--60 pt_md--40 pt_sm--40"
+                      class="button-group text-center text-md-start pt--40 pt_md--40 pt_sm--40"
                     >
                       <a class="rn-btn" href="https://www.linkedin.com/in/arazvant/overlay/1635528604430/single-media-viewer/?profileId=ACoAAB1mNCgB7i0SkFl9nsP42p02fk0oEsCHfNE"
                         ><span>Download My CV</span></a
@@ -91,6 +106,7 @@
                         ><span>Hire Me</span></a
                       >
                     </div>
+                   
                   </div>
                 </div>
               </div>
@@ -103,11 +119,16 @@
                     <h5 class="title">About Me</h5>
                     <p class="about-disc">
                         My expertise lies in developing and deploying robust computer vision systems that leverage state-of-the-art algorithms and techniques. 
-                        Whether it's object detection, image classification, facial recognition, or semantic segmentation, I have the skills and knowledge to tackle any computer vision challenge.
-                        I bring a strong background in machine learning, deep neural networks, and image processing, allowing me to craft tailored solutions to meet the unique needs of each project. 
+                    </p>
+                    <p class="about-disc">
+                        Whether it's image or video processing, object detection, facial recognition, or semantic segmentation, I have the skills and knowledge to tackle any computer vision challenge.
+                    </p>
+                    <p class="about-disc">
+                        I bring a strong background in machine learning and deep learning, allowing me to craft tailored solutions to meet the unique needs of each project. 
                         I work closely with clients to understand their requirements and deliver exceptional results that exceed expectations.
                     </p>
                     <p class="about-disc">
+                        <br/>
                         My commitment to quality and efficiency means I am adept at optimizing models for real-time applications and deploying them on various platforms, including edge devices and cloud infrastructure
                     </p>
                   </div>
@@ -353,7 +374,7 @@
                       </li>
                       <li>
                         <a href="https://www.neuraleaps.com/projects/multipurpose"
-                          >Complex Objects Counting<i
+                          >Warehouse Objects Counting<i
                             data-feather="arrow-right"
                           ></i
                         ></a>
@@ -406,21 +427,19 @@
                         <div class="testimonial-header">
                           <div class="thumbnail">
                             <img
-                              src="assets/images/client/testimonial-3.jpg"
+                              src="assets/images/clients/datamask.png"
                               alt="client-image"
                             />
                           </div>
                           <h5 class="ts-header">
-                            <span class="text-color-primary">@Rafi</span>
-                            Engineer
+                            <span class="text-color-primary">@Martijn D.</span>
+                            CEO
                           </h5>
                         </div>
                         <div class="testimonial-body">
                           <p class="discription">
-                            Martine duke thank you as well for your template
-                            from <span>@Alamin_Orko</span> ! The team is using
-                            it too. It'll really speed up the design and
-                            development process 💨.
+                            Alexandru understood the assignment perfectly. Very nice to work with, good communication and the result is also as desired. 
+                            Alexandru also did work after the job to improve the model in speed and performance.
                           </p>
                         </div>
                       </div>
@@ -431,20 +450,20 @@
                         <div class="testimonial-header">
                           <div class="thumbnail">
                             <img
-                              src="assets/images/client/testimonial-3.jpg"
+                              src="assets/images/clients/elektrobit.png"
                               alt="client-image"
                             />
                           </div>
                           <h5 class="ts-header">
-                            <span class="text-color-primary">@Nipa</span> Tech
+                            <span class="text-color-primary"><a href="https://scholar.google.com/citations?user=3TsU0iMAAAAJ&hl=en">@Sorin G.</a></span> Head of AI Engineering
                           </h5>
                         </div>
                         <div class="testimonial-body">
                           <p class="discription">
-                            Martine duke thank you as well for your template
-                            from <span>@Alamin_Orko</span> ! The team is using
-                            it too. It'll really speed up the design and
-                            development process 💨.
+                            I was Alexandru's Team Manager while working on an autonomous driving research project in collaboration with BMW (Munich).
+                            One of the standout qualities of Alexandru was his commitment to delivering results that exceed expectations. 
+                            I felt confident assigning him to lead a team of 3 into developing and deploying a complete Computer Vision solution as part
+                            of the EPI (Europeean Processor Initiative) 2020 project.
                           </p>
                         </div>
                       </div>
@@ -455,20 +474,57 @@
                         <div class="testimonial-header">
                           <div class="thumbnail">
                             <img
-                              src="assets/images/client/testimonial-3.jpg"
+                              src="assets/images/clients/odeen.png"
                               alt="client-image"
                             />
                           </div>
                           <h5 class="ts-header">
-                            <span class="text-color-primary">@Web</span> know
+                            <span class="text-color-primary"><a href="https://ro.linkedin.com/in/mihaicvasnievschi">@Mihai C.</a></span> CTO
                           </h5>
                         </div>
                         <div class="testimonial-body">
                           <p class="discription">
-                            Martine duke thank you as well for your template
-                            from <span>@Alamin_Orko</span> ! The team is using
-                            it too. It'll really speed up the design and
-                            development process 💨.
+                            I've collaborated with Alexandru on a real-time multi-camera CV solution to track and identify people in surf-parks.
+                            Alexandru seamlessly integrated new features, overcoming challenges with precision and ensuring smooth progress. 
+                            He consistently met deadlines, communicated effectively, and demonstrated an impressive grasp of complex concepts.
+                          </p>
+                        </div>
+                      </div>
+                      <div class="testimonial-inner">
+                        <div class="testimonial-header">
+                          <div class="thumbnail">
+                            <img
+                              src="assets/images/clients/rydoo.png"
+                              alt="client-image"
+                            />
+                          </div>
+                          <h5 class="ts-header">
+                            <span class="text-color-primary">@Ben F.</span> Software Developer
+                          </h5>
+                        </div>
+                        <div class="testimonial-body">
+                          <p class="discription">
+                            Alex was great - he did successful work in a timely fashion, trying multiple different options until he found a good solution. And he was a good communicator.
+                          </p>
+                        </div>
+                      </div>
+                      <div class="testimonial-inner">
+                        <div class="testimonial-header">
+                          <div class="thumbnail">
+                            <img
+                              src="assets/images/clients/repeato.png"
+                              alt="client-image"
+                            />
+                          </div>
+                          <h5 class="ts-header">
+                            <span class="text-color-primary">@Stephan P.</span> CTO
+                          </h5>
+                        </div>
+                        <div class="testimonial-body">
+                          <p class="discription">
+                            Alexandru's ability to navigate complex technologies and concepts was truly impressive. He easily adapted to the codebase
+                            even if it wasn't his primary programming language. He quickly grasped the requirements and applied his expertise to develop a innovative solution
+                            that helped me improve Repeato's accuracy when testing on unseen use-cases.
                           </p>
                         </div>
                       </div>
