feat: completed rest of details, added socials

--- a/home-freelancer-white-version.html
+++ b/home-freelancer-white-version.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="assets/css/vendor/slick-theme.css" />
     <link rel="stylesheet" href="assets/css/vendor/aos.css" />
     <link rel="stylesheet" href="assets/css/plugins/feature.css" />
+
     <!-- Style css -->
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
@@ -55,19 +56,18 @@
                         alt="Personal Portfolio"
                       />
                     </div>
-                    <div class="banner-title-area pt--30">
+                    <div class="banner-title-area pt--20">
                       <span class="subtitle">Hi</span>
                       <h1 class="title">
                         I’m <span>Alex</span><br />
                         <span class="header-caption" id="page-top">
                             <!-- type headline start-->
                             <span class="cd-headline clip is-full-width ">
-                              <span>a</span>
+                              <span class="subtitle">a</span>
                             <!-- ROTATING TEXT -->
                             <span class="cd-words-wrapper">
                               <b class="is-visible">Freelancer</b>
                               <b class="is-hidden">ML Engineer</b>
-                              <b class="is-hidden">Researcher</b>
                               <b class="is-hidden">Software Engineer</b>
 
                             </span>
@@ -76,30 +76,27 @@
                         </span>
                       </h1>
                       <p class="disc">
-                        Senior ML Engineer with over 12+ successfully completed projects!!
+                        Senior ML Engineer with over 13+ successfully completed projects!!
                         <br/>
                         If you are looking for a machine learning freelancer who can transform your vision into reality, please don't hesitate to reach out.
                       </p>
                     </div>
                     <div class="row">
-                        <div class="col-lg-6 col-xl-6 col-md-6 col-sm-6 col-12">
+                        <div class="col-lg-6 col-xl-6 col-md-6 col-sm-6 col-12 pt--15">
                             <div class="social-share-inner-left">
                                 <span class="title">Let's connect</span>
                                 <ul class="social-share d-flex liststyle">
-                                    <li class="facebook"><a href="#"><i data-feather="facebook"></i></a>
-                                    </li>
-                                    <li class="instagram"><a href="#"><i data-feather="instagram"></i></a>
-                                    </li>
-                                    <li class="linkedin"><a href="#"><i data-feather="linkedin"></i></a>
-                                    </li>
+                                    <li class="linkedin"><a href="https://www.linkedin.com/in/arazvant/"><i data-feather="linkedin"></i></a></li>
+                                    <li class="github"><a href="https://github.com/Joywalker"><i data-feather="github"></i></a></li>
+                                    <li class="neuraleaps"><a href="https://www.neuraleaps.com/"><i data-feather="home"></i></a></li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                     <div
-                      class="button-group text-center text-md-start pt--40 pt_md--40 pt_sm--40"
+                      class="button-group text-center text-md-start pt--20 pt_md--40 pt_sm--40"
                     >
-                      <a class="rn-btn" href="https://www.linkedin.com/in/arazvant/overlay/1635528604430/single-media-viewer/?profileId=ACoAAB1mNCgB7i0SkFl9nsP42p02fk0oEsCHfNE"
+                      <a class="rn-btn" href="https://drive.google.com/file/d/1z4lbyXTMOEPPbf2ObMxsRImaEAvQc5hH/view"
                         ><span>Download My CV</span></a
                       >
                       <a class="rn-btn" href="https://calendly.com/neuraleaps/30min"
@@ -289,39 +286,12 @@
                   <div class="inner">
                     <h5 class="title">My Services</h5>
                     <ul class="card-list">
-                      <li>
-                        <a href="#">Machine Learning <i data-feather="arrow-right"></i
-                        ></a>
-                      </li>
-                      <li>
-                        <a href="#"
-                          >Computer Vision<i data-feather="arrow-right"></i
-                        ></a>
-                      </li>
-                      <li>
-                        <a href="#"
-                          >Generative AI (ChatGPT/LargeLanguageModels)<i data-feather="arrow-right"></i
-                        ></a>
-                      </li>
-                      <li>
-                        <a href="#"
-                          >Edge & Cloud Deployments<i data-feather="arrow-right"></i
-                        ></a>
-                      </li>
-                      <li>
-                        <a href="#"
-                          >Web Development<i
-                            data-feather="arrow-right"
-                          ></i
-                        ></a>
-                      </li>
-                      <li>
-                        <a href="#"
-                          >Video Processing<i
-                            data-feather="arrow-right"
-                          ></i
-                        ></a>
-                      </li>
+                      <li class="title">Machine Learning</li>
+                      <li class="title">Computer Vision</li>  
+                      <li class="title">Generative AI (ChatGPT/LargeLanguageModels)</li>  
+                      <li class="title">Edge & Cloud Deployments</li>  
+                      <li class="title">Web Development</li>  
+                      <li class="title">Real-time CV Applications</li>  
                     </ul>
                   </div>
                 </div>
@@ -339,7 +309,7 @@
                     <h5 class="title">My Portfolio</h5>
                     <ul class="card-list">
                       <li>
-                        <a href="https://www.neuraleaps.com/projects/antitheft"
+                        <a href="https://www.neuraleaps.com/projects"
                           >Computer Vision Anti-Theft Solution
                           <i data-feather="arrow-right"></i
                         ></a>
@@ -544,90 +514,93 @@
                   class="rn-contact-area section-height"
                 >
                   <div class="inner">
-                    <h5 class="title">Contact With Me</h5>
+                    <h5 class="title">Contact Me</h5>
                     <!-- Form area Srart -->
-                    <div class="contact-form-wrapper">
-                      <div class="introduce">
-                        <div class="row">
-                          <div class="col-lg-6">
-                            <div class="form-group">
-                              <label for="name">Your Name</label>
-                              <input
-                                class="form-control form-control-lg"
-                                name="name"
-                                id="name"
-                                type="text"
-                              />
+                    <form action="mailto:alexandrurazvant@gmail.com" method="post" enctype="text/plain">
+                      <div class="contact-form-wrapper">
+                        <div class="introduce">
+                          <div class="row">
+                            <div class="col-lg-6">
+                              <div class="form-group">
+                                <label for="name">Your Name</label>
+                                <input
+                                  class="form-control form-control-lg"
+                                  name="name"
+                                  id="name"
+                                  type="text"
+                                />
+                              </div>
                             </div>
-                          </div>
 
-                          <div class="col-lg-6">
-                            <div class="form-group">
-                              <label for="phone">Phone Number</label>
-                              <input
-                                class="form-control"
-                                name="phone"
-                                id="phone"
-                                type="text"
-                              />
+                            <div class="col-lg-6">
+                              <div class="form-group">
+                                <label for="phone">Phone Number</label>
+                                <input
+                                  class="form-control"
+                                  name="phone"
+                                  id="phone"
+                                  type="text"
+                                />
+                              </div>
                             </div>
-                          </div>
 
-                          <div class="col-lg-12">
-                            <div class="form-group">
-                              <label for="email">Email</label>
-                              <input
-                                class="form-control form-control-sm"
-                                id="email"
-                                name="email"
-                                type="email"
-                              />
+                            <div class="col-lg-12">
+                              <div class="form-group">
+                                <label for="email">Email</label>
+                                <input
+                                  class="form-control form-control-sm"
+                                  id="email"
+                                  name="email"
+                                  type="email"
+                                />
+                              </div>
                             </div>
-                          </div>
-                          <div class="col-lg-12">
-                            <div class="form-group">
-                              <label for="subject">subject</label>
-                              <input
-                                class="form-control form-control-sm"
-                                id="subject"
-                                name="subject"
-                                type="text"
-                              />
+                            <div class="col-lg-12">
+                              <div class="form-group">
+                                <label for="subject">subject</label>
+                                <input
+                                  class="form-control form-control-sm"
+                                  id="subject"
+                                  name="subject"
+                                  type="text"
+                                />
+                              </div>
                             </div>
-                          </div>
-                          <div class="col-lg-12">
-                            <div class="form-group">
-                              <label for="message">Your Message</label>
-                              <textarea
-                                name="message"
-                                id="message"
-                                cols="30"
-                                rows="10"
-                              ></textarea>
+                            <div class="col-lg-12">
+                              <div class="form-group">
+                                <label for="message">Your Message</label>
+                                <textarea
+                                  name="message"
+                                  id="message"
+                                  cols="30"
+                                  rows="10"
+                                ></textarea>
+                              </div>
                             </div>
-                          </div>
-                          <div class="col-lg-12">
-                            <a href="#" class="rn-btn">
-                              <span>SEND MESSAGE</span>
-                              <svg
-                                xmlns="http://www.w3.org/2000/svg"
-                                width="24"
-                                height="24"
-                                viewBox="0 0 24 24"
-                                fill="none"
-                                stroke="currentColor"
-                                stroke-width="2"
-                                stroke-linecap="round"
-                                stroke-linejoin="round"
-                                class="feather feather-arrow-right"
-                              >
-                                <line x1="5" y1="12" x2="19" y2="12"></line>
-                                <polyline points="12 5 19 12 12 19"></polyline>
-                              </svg>
-                            </a>
+                            <div class="col-lg-12">
+                              <a class="rn-btn">
+                                <input type="submit" value="SEND MESSAGE">
+                                    <svg
+                                      xmlns="http://www.w3.org/2000/svg"
+                                      width="24"
+                                      height="24"
+                                      viewBox="0 0 24 24"
+                                      fill="none"
+                                      stroke="currentColor"
+                                      stroke-width="2"
+                                      stroke-linecap="round"
+                                      stroke-linejoin="round"
+                                      class="feather feather-arrow-right"
+                                    >
+                                      <line x1="5" y1="12" x2="19" y2="12"></line>
+                                      <polyline points="12 5 19 12 12 19"></polyline>
+                                    </svg>
+                                  </input>
+                                </a>
+                            </div>
                           </div>
                         </div>
-                      </div>
+                      </form>
                     </div>
                     <!-- Form area End -->
                   </div>
